@@ -36,10 +36,13 @@
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandTests.cs" />
     <Compile Include="ExpressionTests.cs" />
+    <Compile Include="ExpressionUtilitiesTests.cs" />
     <Compile Include="LexerTests.cs" />
     <Compile Include="MachineTests.cs" />
     <Compile Include="ParserTests.cs" />
